Fix global filer alignment

--- a/app/root/root.css
+++ b/app/root/root.css
@@ -47,6 +47,7 @@ a {
 
 button {
   outline: 0;
+  margin: 0;
 }
 
 /** Container **/
